Alteração no campo de veículos e estilo da navbar

--- a/views/dashboard/vehicle/a_vehicle.handlebars
+++ b/views/dashboard/vehicle/a_vehicle.handlebars
@@ -3,11 +3,11 @@
 
 <div class="page">
 <div class="container">
-        <div class="mt-5 mb-4">
-          <h1>Veículo
-          </h2>
-          <hr>
-        </div>
+    <div class="mt-5 mb-4">
+        <h1>Veículo
+        </h2>
+        <hr>
+    </div>
 
     <div class="card">
               <div id="card" class="card-header">
@@ -25,12 +25,7 @@
                             <svg class="be m-1" width="20" height="20"><use xlink:href="#car-side"/></svg>
                         </label>
                         
-                        <select name="modelo" id="cars" name="cars" class="form-control">
-                            <option value="volvo">Volvo</option>
-                            <option value="saab">Saab</option>
-                            <option value="fiat">Fiat</option>
-                            <option value="audi">Audi</option>
-                        </select>
+                        <input name="modelo" type="text" id="cars" class="form-control" placeholder="Veículo" required>
                     </div>
 
                     <div class="container d-flex m-2">
@@ -38,7 +33,7 @@
                             <svg class="m-1" width="20" height="20"><use xlink:href="#car-plate"/></svg>
                         </label>
     
-                        <input name="placa" type="text" id="placa" class="form-control" placeholder="Placa">
+                        <input name="placa" type="text" id="placa" class="form-control" placeholder="Placa" required>
                     </div>
 
 
@@ -47,7 +42,7 @@
                             <svg class="m-1" width="20" height="20"><use xlink:href="#color"/></svg>
                         </label>
     
-                        <input name="cor" type="text" id="cor" class="form-control" placeholder="Cor">
+                        <input name="cor" type="text" id="cor" class="form-control" placeholder="Cor" required>
                     </div>
 
                     <div class="container d-flex m-2">
@@ -55,7 +50,7 @@
                             <svg class="m-1" width="20" height="20"><use xlink:href="#money"/></svg>
                         </label>
     
-                        <input name="custo" type="text" id="money" class="form-control" placeholder="Custo diário">
+                        <input name="custo" type="text" id="money" class="form-control" placeholder="Custo diário" required>
                     </div>
 
                      <div class="d-flex mx-1">
