--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -50,7 +50,7 @@
       <div id="nav-footer" class="mt-5"> 
         <form action="/logout" method="post">
 
-          <button type="submit" >
+          <button type="submit" class="btn" >
             <a class="nav-link text-dark">
               <svg class="bi pe-none me-2" width="25" height="25"><use xlink:href="#exit"/></svg>
               Sair
