--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -39,7 +39,7 @@
             </a>
           </li>
           <li id="configuracoes">
-            <a href="/configuracoes" class="nav-link text-dark">
+            <a href="/users" class="nav-link text-dark">
               <svg class="bi pe-none m-2" width="25" height="25"><use xlink:href="#settings"/></svg>
               Configurações
             </a>
