--- a/views/dashboard/user/a_user.handlebars
+++ b/views/dashboard/user/a_user.handlebars
@@ -18,13 +18,13 @@
     
         <div id="card-body" class="card-body">
 
-            <form  action="">
+            <form  action="/users/add" method="post">
                 
                 <div class="container d-flex m-2">
                     <label for="nome">
                         <svg class="m-1" width="20" height="20"><use xlink:href="#signature"/></svg>
                     </label>
-                    <input type="text" id="nome" class="form-control" placeholder="Nome">
+                    <input type="text" id="nome" class="form-control" placeholder="Nome" name="nome">
                 </div>
 
 
@@ -32,14 +32,14 @@
                     <label for="cpf">
                         <svg class="m-1" width="20" height="20"><use xlink:href="#cpf-icon"/></svg>
                     </label>
-                    <input type="text" id="cpf" class="form-control" maxlength="11" placeholder="CPF">
+                    <input type="text" id="cpf" class="form-control" maxlength="11" placeholder="CPF" name="cpf">
                 </div>
 
                 <div class="container d-flex align-content-center m-2">
                     <label for="login">
                         <svg class="be m-1" width="20" height="20"><use xlink:href="#login"/></svg>
                     </label>
-                    <input type="text" id="login" class="form-control" placeholder="Usuário">
+                    <input type="text" id="login" class="form-control" placeholder="Usuário" name="login">
                 </div>
 
                 
@@ -47,25 +47,26 @@
                     <label for="senha_1">
                         <svg class="m-1" width="20" height="20"><use xlink:href="#lock"/></svg>
                     </label>
-                    <input type="password" id="senha_1" class="form-control" placeholder="Senha">
+                    <input type="password" id="senha_1" class="form-control" placeholder="Senha" name="senha_1">
                 </div>
                 
                 <div class="container d-flex m-2">
                     <label for="senha_2">
                         <svg class="m-1" width="20" height="20"><use xlink:href="#lock"/></svg>
                     </label>
-                    <input type="password" id="senha_2" class="form-control" placeholder="Repita a Senha">
-                </div>                   
+                    <input type="password" id="senha_2" class="form-control" placeholder="Repita a Senha" name="senha_2">
+                </div>  
+
+                <div class="d-flex mx-1">
+                    <button type="button" class="btn btn-outline-info btn-block mt-3 mx-1" > Cancelar</button>
+                    <button type="submit" class="btn btn-info btn-block mt-3 mx-1" > Cadastrar novo usuário</button>
+                </div>                 
             </form>
                 
         </div>
             
     </div>
 
-    <div class="d-flex mx-1">
-        <button type="button" class="btn btn-outline-info btn-block mt-3 mx-1" > Cancelar</button>
-        <button type="button" class="btn btn-info btn-block mt-3 mx-1" > Cadastrar novo usuário</button>
-    </div>
 
 </div>
 </div>
