--- a/views/partials/tabela_usuarios.handlebars
+++ b/views/partials/tabela_usuarios.handlebars
@@ -1,17 +1,25 @@
 <div class="tabela_usuariosPartials"> 
-
+{{#each users}} 
     <tr>
-        <td>Usuário</td>
-        <td>Info 02</td>
-        <td>Info 03</td>
-        <td>Info 04</td>
-        <td >
+        <td>{{this.nome}}</td>
+        <td>{{this.cpf}}</td>
+        <td>{{this.login}}</td>
+        <td style="display: flex;">
+            <a id="edit_btn" class="btn" href="/users/edit/{{this.id}}" >{{> edit}}</a>
+            <form action="/users/remove" method="post">
+                <input type="hidden" name="id" value="{{this.id}}">
+                <button type="submit" id="exclude_btn" class="btn"  >
+                  {{> exclude}}
+                </button>
+            </form>
+        </td>
+        {{!-- <td >
             <a id="edit_btn" class="btn" href="#" >{{> edit}}</a>
             <a id="exclude_btn" class="btn" href="#" >{{> exclude}}</a>
-        </td>
+        </td> --}}
     </tr>
 
-    <tr>
+    {{!-- <tr>
         <td>Usuário</td>
         <td>Info 02</td>
         <td>Info 03</td>
@@ -31,6 +39,6 @@
             <a id="edit_btn" class="btn" href="#" >{{> edit}}</a>
             <a id="exclude_btn" class="btn" href="#" >{{> exclude}}</a>
         </td>
-    </tr> 
-
+    </tr>  --}}
+{{/each}}
 </div>
