--- a/views/dashboard/user/a_user.handlebars
+++ b/views/dashboard/user/a_user.handlebars
@@ -32,33 +32,32 @@
                     <label for="cpf">
                         <svg class="m-1" width="20" height="20"><use xlink:href="#cpf-icon"/></svg>
                     </label>
-                    <input type="text" id="cpf" class="form-control" maxlength="11" placeholder="CPF" name="cpf">
+                    <input type="number" id="cpf" class="form-control" maxlength="11" placeholder="CPF" name="cpf">
                 </div>
 
-                <div class="container d-flex align-content-center m-2">
-                    <label for="login">
-                        <svg class="be m-1" width="20" height="20"><use xlink:href="#login"/></svg>
+                 <div class="container d-flex m-2">
+                    <label for="email">
+                        <svg class="m-1" width="20" height="20"><use xlink:href="#signature"/></svg>
                     </label>
-                    <input type="text" id="login" class="form-control" placeholder="Usuário" name="login">
+                    <input type="text" id="email" class="form-control" placeholder="Email" name="email">
                 </div>
-
                 
                 <div class="container d-flex m-2">
-                    <label for="senha_1">
+                    <label for="senha">
                         <svg class="m-1" width="20" height="20"><use xlink:href="#lock"/></svg>
                     </label>
-                    <input type="password" id="senha_1" class="form-control" placeholder="Senha" name="senha_1">
+                    <input type="password" id="senha_1" class="form-control" placeholder="Senha" name="senha">
                 </div>
                 
-                <div class="container d-flex m-2">
+                {{!-- <div class="container d-flex m-2">
                     <label for="senha_2">
                         <svg class="m-1" width="20" height="20"><use xlink:href="#lock"/></svg>
                     </label>
                     <input type="password" id="senha_2" class="form-control" placeholder="Repita a Senha" name="senha_2">
-                </div>  
+                </div>   --}}
 
                 <div class="d-flex mx-1">
-                    <button type="button" class="btn btn-outline-info btn-block mt-3 mx-1" > Cancelar</button>
+                    <a href="/users" class="btn btn-outline-info btn-block mt-3 mx-1">Cancelar</a>
                     <button type="submit" class="btn btn-info btn-block mt-3 mx-1" > Cadastrar novo usuário</button>
                 </div>                 
             </form>
