--- a/views/dashboard/user/e_user.handlebars
+++ b/views/dashboard/user/e_user.handlebars
@@ -16,18 +16,19 @@
 
               <div id="card" class="card-header">
                   <svg class="m-1" width="20" height="20"><use xlink:href="#user"/></svg>
-                  Novo Usuário
+                  Editar Usuário
               </div>
     
         <div id="card-body" class="card-body">
 
-            <form  action="">
+            <form  action="/users/edit/" method="post">
                 
                 <div class="container d-flex m-2">
+                    <input type="hidden" name="id" value="{{user.id}}">
                     <label for="nome">
                         <svg class="m-1" width="20" height="20"><use xlink:href="#signature"/></svg>
                     </label>
-                    <input type="text" id="nome" class="form-control" placeholder="Nome">
+                    <input type="text" id="nome" class="form-control" placeholder="Nome" name="nome" value="{{user.nome}}">
                 </div>
 
 
@@ -35,40 +36,43 @@
                     <label for="cpf">
                         <svg class="m-1" width="20" height="20"><use xlink:href="#cpf-icon"/></svg>
                     </label>
-                    <input type="text" id="cpf" class="form-control" maxlength="11" placeholder="CPF">
+                    <input type="text" id="cpf" class="form-control" maxlength="11" placeholder="CPF" name="cpf" value="{{user.cpf}}">
                 </div>
 
                 <div class="container d-flex align-content-center m-2">
-                    <label for="login">
-                        <svg class="be m-1" width="20" height="20"><use xlink:href="#login"/></svg>
+                    <label for="email">
+                        <svg class="be m-1" width="20" height="20"><use xlink:href="#email"/></svg>
                     </label>
-                    <input type="text" id="login" class="form-control" placeholder="Usuário">
+                    <input type="text" id="email" class="form-control" placeholder="Usuário" name="email" value="{{user.email}}">
                 </div>
 
                 
                 <div class="container d-flex m-2">
-                    <label for="senha_1">
+                    <label for="senha">
                         <svg class="m-1" width="20" height="20"><use xlink:href="#lock"/></svg>
                     </label>
-                    <input type="password" id="senha_1" class="form-control" placeholder="Senha">
+                    <input type="password" id="senha_1" class="form-control" placeholder="Senha" name="senha" value="{{user.senha}}">
                 </div>
                 
-                <div class="container d-flex m-2">
+                {{!-- <div class="container d-flex m-2">
                     <label for="senha_2">
                         <svg class="m-1" width="20" height="20"><use xlink:href="#lock"/></svg>
                     </label>
-                    <input type="password" id="senha_2" class="form-control" placeholder="Repita a Senha">
-                </div>                   
+                    <input type="password" id="senha_2" class="form-control" placeholder="Repita a Senha" name="senha_2" value="{{user.senha_2}}">
+                </div>       --}}
+
+                <div class="d-flex mx-1">
+                    <a href="/users" class="btn btn-outline-info btn-block mt-3 mx-1">Cancelar</a>
+                    {{!-- <button type="submit" class="btn btn-info btn-block mt-3 mx-1" > Atualizar</button> --}}
+                    <input type="submit" value="Atualizar" class="btn btn-info btn-block mt-3 mx-1">
+                </div>             
             </form>
                 
         </div>
             
     </div>
 
-    <div class="d-flex mx-1">
-        <button type="button" class="btn btn-outline-info btn-block mt-3 mx-1" > Cancelar</button>
-        <button type="button" class="btn btn-info btn-block mt-3 mx-1" > Cadastrar novo usuário</button>
-    </div>
+    
 
 </div>
 </div>
