--- a/views/dashboard/client/e_client.handlebars
+++ b/views/dashboard/client/e_client.handlebars
@@ -54,7 +54,8 @@
                     </div>  
 
                     <div class="d-flex mx-1">
-                        <button type="button" class="btn btn-outline-info btn-block mt-3 mx-1" > Cancelar</button>
+                        {{!-- <button type="button" class="btn btn-outline-info btn-block mt-3 mx-1" > Cancelar</button> --}}
+                        <a href="/clients" class="btn btn-outline-info btn-block mt-3 mx-1">Cancelar</a>
                         {{!-- <button type="submit" class="btn btn-info btn-block mt-3 mx-1" > Cadastrar novo cliente</button> --}}
                         <input type="submit" value="Atualizar" class="btn btn-info btn-block mt-3 mx-1">
                     </div>
