--- a/views/dashboard/vehicle/vehicle.handlebars
+++ b/views/dashboard/vehicle/vehicle.handlebars
@@ -26,7 +26,7 @@
                     </thead>
                     <tbody>
                     </tbody>
-                        {{> tabela_alocacoes}}
+                        {{> tabela_veiculos}}
                 </table>
             </div>
         </div>
