modificações em views

--- a/views/dashboard/client/client.handlebars
+++ b/views/dashboard/client/client.handlebars
@@ -10,7 +10,7 @@
 
         <div class="card">
             <div id="card" class="card-header">
-                <svg class="m-1" width="20" height="20"><use xlink:href="#road"/></svg>
+                <svg class="m-1" width="20" height="20"><use xlink:href="#clients"/></svg>
                 Clientes Cadastrados
             </div>
             <div class="card-body">    
