--- a/views/dashboard/client/e_client.handlebars
+++ b/views/dashboard/client/e_client.handlebars
@@ -11,7 +11,7 @@
     <div class="card">
               <div id="card" class="card-header">
                   <svg class="m-1" width="20" height="20"><use xlink:href="#client"/></svg>
-                  Cadastrar Cliente
+                  Editar Cliente
               </div>
     
               <div id="card-body" class="card-body">
@@ -54,9 +54,7 @@
                     </div>  
 
                     <div class="d-flex mx-1">
-                        {{!-- <button type="button" class="btn btn-outline-info btn-block mt-3 mx-1" > Cancelar</button> --}}
                         <a href="/clients" class="btn btn-outline-info btn-block mt-3 mx-1">Cancelar</a>
-                        {{!-- <button type="submit" class="btn btn-info btn-block mt-3 mx-1" > Cadastrar novo cliente</button> --}}
                         <input type="submit" value="Atualizar" class="btn btn-info btn-block mt-3 mx-1">
                     </div>
 
