--- a/views/dashboard/vehicle/a_vehicle.handlebars
+++ b/views/dashboard/vehicle/a_vehicle.handlebars
@@ -11,7 +11,7 @@
 
     <div class="card">
               <div id="card" class="card-header">
-                  <svg class="m-1" width="20" height="20"><use xlink:href="#road"/></svg>
+                  <svg class="m-1" width="20" height="20"><use xlink:href="#car"/></svg>
                   Cadastrar Veículo
               </div>
     
