--- a/views/dashboard/vehicle/vehicle.handlebars
+++ b/views/dashboard/vehicle/vehicle.handlebars
@@ -10,7 +10,7 @@
 
         <div class="card">
             <div id="card" class="card-header">
-                <svg class="m-1" width="20" height="20"><use xlink:href="#road"/></svg>
+                <svg class="m-1" width="20" height="20"><use xlink:href="#car"/></svg>
                 Veículos Cadastrados
             </div>
             <div class="card-body">     
