update vehicle route and user emoji

--- a/views/dashboard/vehicle/a_vehicle.handlebars
+++ b/views/dashboard/vehicle/a_vehicle.handlebars
@@ -17,7 +17,7 @@
     
               <div id="card-body" class="card-body">
 
-                <form  action="/dashboard/vehicles/add/register" method="post">
+                <form  action="/vehicles/add/register" method="post">
                     
                     
                     <div class="container d-flex align-content-center m-2">
