--- a/views/dashboard/vehicle/e_vehicle.handlebars
+++ b/views/dashboard/vehicle/e_vehicle.handlebars
@@ -17,7 +17,7 @@
     
               <div id="card-body" class="card-body">
 
-                <form action="/dashboard/vehicles/edit/{{veiculos.id}}" method="post">
+                <form action="/vehicles/edit/{{veiculos.id}}" method="post">
                     
                     
                     <div class="container d-flex align-content-center m-2">
