--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -21,7 +21,7 @@
             </a>
           </li>
           <li id="veiculos">
-            <a href="/dashboard/vehicles" class="nav-link text-dark">
+            <a href="/vehicles" class="nav-link text-dark">
               <svg class="bi pe-none m-2" width="25" height="25"><use xlink:href="#car"/></svg>  
               Veículos
             </a>
