--- a/views/dashboard/vehicle/a_vehicle.handlebars
+++ b/views/dashboard/vehicle/a_vehicle.handlebars
@@ -4,8 +4,7 @@
 <div class="page">
 <div class="container">
     <div class="mt-5 mb-4">
-        <h1>Veículo
-        </h2>
+        <h1>Veículos</h2>
         <hr>
     </div>
 
@@ -54,7 +53,7 @@
                     </div>
 
                      <div class="d-flex mx-1">
-                        <button type="submit" class="btn btn-outline-info btn-block mt-3 mx-1" > Cancelar</button>
+                        <a class="btn btn-outline-info btn-block mt-3 mx-1"  href="/vehicles">Cancelar</a> 
                         <button type="submit" class="btn btn-info btn-block mt-3 mx-1" > Cadastrar novo veículo</button>
 
                     </div>
