--- a/views/dashboard/vehicle/e_vehicle.handlebars
+++ b/views/dashboard/vehicle/e_vehicle.handlebars
@@ -4,8 +4,7 @@
 <div class="page">
 <div class="container">
         <div class="mt-5 mb-4">
-          <h1>Veículo
-          </h2>
+          <h1>Veículos</h2>
           <hr>
         </div>
 
