--- a/views/layouts/principal.handlebars
+++ b/views/layouts/principal.handlebars
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xandão Car</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link type="image/png" sizes="16x16" rel="icon" href="../favicon/favicon-16.png">
     <link type="image/png" sizes="32x32" rel="icon" href="../favicon/favicon-32.png">
     <link type="image/png" sizes="96x96" rel="icon" href="../favicon/favicon-96.png">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    
 </head>
 <body>
     {{{body}}}
